--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,6 +1,11 @@
 .footer {
-  padding-top: 16px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 24px;
   padding-bottom: 16px;
+  background-color: #fff;
   border-top: 2px solid $extraBackgroundColor;
 
   .container {
